# cs-ubb-eduml-app

./: .copier-answers.yml  .dockerignore  .gitignore  Dockerfile  MLProject  README.md  answers.yml  copier.yml  pyproject.toml  train.py
.github/workflows/: publish-image.yml
copier-template/: Dockerfile  MLProject.j2  README.md.j2  pyproject.toml.j2
copier-template/helm/{{project_slug}}/: Chart.yaml.j2  values.yaml.j2
copier-template/helm/{{project_slug}}/templates/: deployment.yaml
copier-template/src/{{package_name}}/: __main__.py.j2
copier-template/src/{{package_name}}/config/: __init__.py.j2  _settings.py.j2
copier-template/src/{{package_name}}/mlflow/: __init__.py  __init__.py.j2  _decorator.py
copier-template/src/{{package_name}}/mlflow/wrappers/: __init__.py.j2  _base.py  _sklearn.py.j2  _tf.py.j2  _torch.py.j2
helm/cs-ubb-eduml-app/: Chart.yaml  values.yaml
helm/cs-ubb-eduml-app/templates/: deployment.yaml
helm/cs-ubb-mlops-test-job/: Chart.yaml  values.yaml
helm/cs-ubb-mlops-test-job/templates/: _helpers.tpl  deployment.yaml
helm/eduml-app/: Chart.yaml  manifest.yaml  values.yaml
helm/eduml-app/templates/: _helpers.tpl  deployment.yaml
src/cs_ubb_eduml_app/: __main__.py
src/cs_ubb_eduml_app/config/: __init__.py  _settings.py
src/cs_ubb_eduml_app/mlflow/wrappers/: __init__.py  _base.py  _sklearn.py  _tf.py  _torch.py
src/cs_ubb_mlops_test/: __main__.py
src/cs_ubb_mlops_test/mlflow/: __init__.py  _decorator.py
src/cs_ubb_mlops_test/mlflow/wrappers/: __init__.py  _base.py  _sklearn.py  _torch.py
